# deepagents-handson

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
analyst/: README.md  __init__.py  first_call.py  paths.py  schema.py
analyst/sample_inbox/: _manifest.yaml
analyst/tests/: test_contract.py
book/: concept.md  index.md  package-lock.json  package.json  toc.md
book/.vitepress/: config.mts
book/guide/: chapter2-sample.md
book/scripts/: build-chapters.mjs  copy-assets.mjs
books/md/: Chapter 0. 환경 셋업.md  Chapter 1. Kick-off & Agent 패러다임.md  Chapter 2. LangChain LangGraph Agent와 Harness 구조.md  Chapter 3. DeepAgents와 Harness 실습.md  Chapter 4. Skills와 MCP 연계.md  Chapter 5. A2A로 역할 분리.md  Chapter 6. 통합 Demo와 Wrap-up.md
ch1-llm-basics/: classify_one.py  llm_experiment.ipynb  llm_internals.ipynb
ch2-langgraph-agent/: exercise_graph.py  graph_internals.ipynb  intake_graph.py  step1_basic_agent.py  step2_tool_calling.py  step3_state_retry.py  step4_long_running.py  tool_internals.ipynb
ch2-langgraph-agent/notebooks/: step2_fill_in_blank.ipynb  step3_middleware_lab.ipynb
ch3-deepagents/: harness_internals.ipynb  research_orchestrator.py  step1_init_agent.py  step2_filesystem.py  step3_planning.py  step4_polling.py
ch3-deepagents/notebooks/: harness_fill_in_blank.ipynb
ch4-skills-mcp/: agent_with_mcp.py  exercise_mcp_server.py  exercise_skill.py  mcp_client_demo.py  mcp_inbox_server.py  mcp_mail_server.py  mcp_multi_client.py  mcp_text_server.py  okf_store.py  skill_agent.py
ch4-skills-mcp/.codex-plugin/: plugin.json
ch4-skills-mcp/brief_skill/: SKILL.md
ch4-skills-mcp/inbox-brief/: SKILL.md  plugin.json
ch4-skills-mcp/mail_skill/: SKILL.md
ch4-skills-mcp/notebooks/: skill_mcp_fill_in_blank.ipynb
ch4-skills-mcp/reconcile-rules/: SKILL.md
ch5-a2a/: a2a_agent_client.py  a2a_verify.py  check_agent.py  check_and_notify_client.py  notify_agent.py  reviser_agent.py  verifier_agent.py
ch6-integration/: analyst_app.py  exercise_adapter.py  exercise_capstone.py  mail_agent_demo.py  mail_agent_demo_llm.py  refine_loop.py
scripts/: preflight.sh  setup.cmd  setup.sh  teardown.sh
(+12 files in other folders)
