[project]
name = "lecture"
version = "0.1.0"
description = "AI Agent Development Lecture"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.4",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "mcp[cli]>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "httpx>=0.27.0",
    "uvicorn>=0.34.0",
    "a2a-sdk[http-server]>=0.3.25",
]
