[project]
name = "lecture"
version = "0.1.0"
description = "AI Agent Development Lecture — 인박스 리서치 애널리스트"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.10",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "mcp[cli]>=1.0.0",
    "langchain-mcp-adapters>=0.3.0",
    "a2a-sdk[http-server]>=1.1.0",
    "httpx>=0.27.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.9",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 공유 데이터 계약 analyst/ 만 설치형 패키지(전 챕터가 어디서 실행되든 import). ch*/ 는 스크립트.
[tool.hatch.build.targets.wheel]
packages = ["analyst"]
