[project]
name = "lecture"
version = "0.1.0"
description = "AI Agent Development Lecture — 인박스 리서치 애널리스트"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.10",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "mcp[cli]>=1.0.0",
    "langchain-mcp-adapters>=0.3.0",
    "a2a-sdk[http-server]>=1.1.0",
    "httpx>=0.27.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ipykernel>=6.29", "nbconvert>=7.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 공유 데이터 계약 analyst/ 만 설치형 패키지(전 챕터가 어디서 실행되든 import). ch*/ 는 스크립트.
[tool.hatch.build.targets.wheel]
packages = ["analyst"]

# 교재 코드는 그대로 학생에게 보여 주므로 본문에 린터 주석(# noqa)을 남기지 않는다.
# 대신 의도된 두 패턴만 여기서 한 번에 끈다 — 다른 챕터 부품을 재사용하려 sys.path를
# 손본 뒤 import(E402), mock 폴백을 위한 광역 except(BLE001).
[tool.ruff.lint]
ignore = ["E402", "BLE001"]
